# kludgeocrat.github.io

./: Open Data Crime Trend.ipynb  README.md  Vancouver Crime Trend.ipynb  index.html  pyproject.toml  raw-data.csv
