[tool.poetry]
name = "crime-stats"
version = "0.1.0"
description = "An interactive crime dashboard for Vancouver"
authors = ["Kludgeocrat reddit.com/u/kludgeocracy"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.5.0"
pandas = "^1.4.0"
kaleido = "0.2.1"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
